--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,7 @@ h1 {
     border-radius: 10px;
    }
    form {
-    display: flex;
+    display: grid;
 }
 
 .hint {
@@ -43,4 +43,43 @@ font-size:16px;
 border-radius: 50px;
 line-height: 20px;
 color:#4a4a4a;
+}
+.submit-button{
+    margin: 0 0 20px 10px;
+    background: #635994;
+    color: white;
+    border:none;
+    border-radius: 50px;
+    padding: 14px 24px;
+    width:150px;
+    font-size: 16px;
+}
+.submit-button:hover{
+    background: #443d65;;
+}
+.name {
+    font-size:16px;
+    background-color: white;
+    padding: 20px;
+    line-height: 2;
+    font-weight: 400;
+    border-left: 3px solid #635994;
+    box-shadow: 0px 20px 60px rgba(65,50,100,0.08);
+}
+.hidden {
+    display: none;
+}
+
+footer {
+    text-align: center;
+    font-size: 13px;
+    margin-top:30px;
+}
+.generating {
+    animation: blink-animation 1s steps(5, start) infinite;
+}
+@keyframes blink-animation {
+    to {
+        visibility:hidden;
+    }
 }
